...
@Composable
fun RoleSelectionScreen(
    onVisitante: () -> Unit,
    onColeccionista: () -> Unit
) {
    var selectedTab by remember { mutableIntStateOf(0) }
    val tabItems = listOf("Visitante", "Coleccionista")

    Scaffold(
        bottomBar = {
            NavigationBar(containerColor = Color(0xFFF7F3EA)) {
                NavigationBarItem(
                    selected = selectedTab == 0,
...
            modifier = Modifier
                .fillMaxSize()
                .padding(paddingValues),
            contentAlignment = Alignment.Center
        ) {
            Text(
                text = "Vinilos",
                fontWeight = FontWeight.Bold,
                fontSize = 22.sp,
                color = Color.Black
            )
        }
    }
...
