...
                .padding(paddingValues)
                .padding(horizontal = 32.dp, vertical = 40.dp),
            verticalArrangement = Arrangement.spacedBy(24.dp),
            horizontalAlignment = Alignment.CenterHorizontally
        ) {
            MenuButton(
                text = "Catálogo de álbumes",
                onClick = { navController.navigate("albums") }
            )
            MenuButton(
                text = "Listado de artistas",
                onClick = { navController.navigate("artists") }
            )
...
